[gd_scene load_steps=3 format=3 uid="uid://bl23hoh6iwpye"]

[ext_resource type="Script" uid="uid://dt1hnktuhft1j" path="res://menus/settings/video.gd" id="1_bosdn"]
[ext_resource type="PackedScene" uid="uid://c11kipaa6n0yl" path="res://menus/settings/Components/setting.tscn" id="1_twyt4"]

[node name="Video" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bosdn")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Fullscreen" parent="VBoxContainer" instance=ExtResource("1_twyt4")]
layout_mode = 2
title = "Fullscreen"

[node name="FullscreenOption" type="OptionButton" parent="VBoxContainer/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 6
item_count = 5
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Minimized"
popup/item_1/id = 1
popup/item_2/text = "Maximized"
popup/item_2/id = 2
popup/item_3/text = "Fullscreen"
popup/item_3/id = 3
popup/item_4/text = "Exclusive Fullscreen"
popup/item_4/id = 4

[node name="HSeparator1" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Resolution" parent="VBoxContainer" instance=ExtResource("1_twyt4")]
layout_mode = 2
title = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 6

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Vsync" parent="VBoxContainer" instance=ExtResource("1_twyt4")]
layout_mode = 2
title = "Vsync"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/Vsync"]
layout_mode = 2
size_flags_horizontal = 6
selected = 0
item_count = 4
popup/item_0/text = "Enabled"
popup/item_0/id = 0
popup/item_1/text = "Disabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[connection signal="item_selected" from="VBoxContainer/Fullscreen/FullscreenOption" to="." method="_on_fullscreen_option_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Resolution/ResolutionOption" to="." method="_on_resolution_option_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Vsync/OptionButton" to="." method="_on_option_button_item_selected"]
